# pdflinkcheck

./: .git-aliases  .gitconfig_alias  .gitignore  Dockerfile.multi-dev  Dockerfile.multi-dev.alpine  GeorgeClaytonBennett.PDFLinkCheck.yaml  LICENSE  MANIFEST.in  NOTICE  README.md  TLDR.toml  after_hatch.txt  build_executable.py  build_pyz.py  main.py  makefile  pdflinkcheck_1.1.83.0_x64__5ns4vcjhm6yga.msix  pyproject.toml  requirements_23December2025.txt  test-rust.py
.github/workflows/: build.yml  ci.yml  docker.yml  microsoftstore.yml  msix.yml  publish.yml
docs/: CHANGELOG.md  NOTES.md
msix/: AppxManifest.xml  AppxManifest_unversioned.xml
pyinstaller_hooks/: hook-pdflinkcheck.py
rust_pdflinkcheck/: Cargo.toml  README.md  package.sh  pdfium-linux-x64.tgz
rust_pdflinkcheck/defunct/: lib_lopdf.rs
rust_pdflinkcheck/src/: analysis.rs  analysis_lopdf.rs  analysis_pdfium.rs  lib.rs  main.rs  types.rs
src/: cli.py
src/pdflinkcheck/: __init__.py  __main__.py  analysis_pdfium.py  analysis_pymupdf.py  analysis_pypdf.py  analysis_pypdf_v2.py  analyze.py  analyze_pymupdf.py  analyze_pypdf.py  analyze_pypdf_v2.py  build.py  cli.py  datacopy.py  dev.py  environment.py  ffi.py  gui.py  gui_alt.py  gui_tight.py  helpers.py  io.py  report.py  rise.py  rise_direct  security.py  stdlib_server.py  stdlib_server_alt.py  stdlib_server_altJan3.py  stdlib_server_altJan3b.py  update_msix_version.py  validate.py  version_info.py
src/pdflinkcheck/.ipynb_checkpoints/: borb-checkpoint.py  rise2-checkpoint.py
src/pdflinkcheck/data/: I Have Questions.md  README.md
