[project]
name = "pdflinkcheck"
version = "0.1.5"
description = "A purpose-built PDF link analysis reporting tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.6",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
pdflinkcheck = "pdflinkcheck.cli:app"
pdflinkcheck-gui = "pdflinkcheck.gui:start_gui"

[tool.setuptools.packages.find]
where = ["src"]  

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
