[project]
name = "pdflinkcheck"
version = "1.1.16"
description = "A purpose-built PDF link analysis reporting tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyhabitat>=1.0.53",
    "pymupdf>=1.26.6",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
pdflinkcheck = "pdflinkcheck.cli:app"
pdflinkcheck-gui = "pdflinkcheck.gui:start_gui" 

[tool.setuptools.packages.find]
where = ["src"]  

[project.optional-dependencies]
dev = [
    "ruff>=0.1.13",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    # Add any other development tools here (e.g., build, shiv, etc., if you want them tracked here)
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: File Formats",
    "Topic :: Office/Business",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
]