[project]
name = "pdflinkcheck"
version = "1.1.67"
description = "A purpose-built PDF link analysis and reporting tool with GUI and CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyhabitat>=1.0.53",
    "pypdf>=6.4.2",
    "rich>=14.2.0",
    "typer>=0.20.0",
]
license-files = ["LICENSE"]
classifiers=[
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers", # library and documentation
    "Intended Audience :: Science/Research", # Technical manuals, engineering
    "Intended Audience :: Other Audience", # Government/engineering docs
    "Topic :: File Formats",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    #"Development Status :: 5 - Production/Stable",
]
authors = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" },
]
maintainers = [
    { name = "George Clayton Bennett", email = "george.bennett@memphistn.gov" },
]

[project.urls]
Homepage = "https://github.com/city-of-memphis-wastewater/pdflinkcheck"
Repository = "https://github.com/city-of-memphis-wastewater/pdflinkcheck"

[project.scripts]
pdflinkcheck = "pdflinkcheck.cli:app"

# Hatching has Automatic discovery of src/

[project.optional-dependencies]
# This allows users to do: pip install pdflinkcheck[full]
full = [
    #"pymupdf>=1.26.7 ; platform_system == 'Linux' and platform_machine != 'aarch64'" # to avoid on termux
    "pymupdf>=1.26.7"  # let them try
]
gui = [
    "sv-ttk>=2.6.1",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyinstaller>=6.17.0",
    "shiv>=1.0.8",
    "ruff>=0.7.0 ; platform_system == 'Linux' and platform_machine != 'aarch64'", # to avoid on termux
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "sv-ttk>=2.6.1",
]

[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = ["uv_build"]
build-backend = "uv_build"

#[tool.hatch.build.targets.wheel]
#packages = ["src/pdflinkcheck"]
#artifacts = [
#    "src/pdflinkcheck/data/LICENSE",
#    "src/pdflinkcheck/data/README.md"
#    ]
    
#[tool.uv.build-backend.data]
#data = ["src/pdflinkcheck/data"]

#[tool.hatch.build.targets.wheel.force-include]
#"pyproject.toml" = "pdflinkcheck/data/pyproject.toml"

#[tool.hatch.build.targets.sdist]
#include = [
#    "pyproject.toml",
#    "src/pdflinkcheck/data/LICENSE",
#    "src/pdflinkcheck/data/README.md",
#]


