[package]
name = "rust_pdflinkcheck"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core for pdflinkcheck: fast PDF link & TOC extraction"
authors = ["City of Memphis Wastewater <george.bennett@memphistn.gov>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

lopdf = "0.32"
