[package]
name = "rust_pdflinkcheck"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core for pdflinkcheck: fast PDF link & TOC extraction"
authors = ["City of Memphis Wastewater <george.bennett@memphistn.gov>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# --- For pdfium version ---
#pdfium-render = { version = "0.8", features = ["pdfium-lib"] }
pdfium-render = { version = "0.8.37", features = ["bindings"] }

# --- For lopdf version ---
#lopdf = "0.38"          # latest as of late 2025
#pdf-extract = "0.10"
#anyhow = "1.0"
